--- a/public/main.css
+++ b/public/main.css
@@ -7,3 +7,12 @@ html {
 canvas {
   display: block;
 }
+
+.surface {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1000px;
+  height: 1000px;
+  opacity: 0;
+}
