--- a/docs/main.css
+++ b/docs/main.css
@@ -3,12 +3,13 @@ html {
   margin: 0;
   padding: 0;
   display: flex;
+  background: white;
 }
 
 canvas {
   display: block;
 }
-/* 
+
 .container {
   height: 100vh;
   width: 100vw;
@@ -31,7 +32,7 @@ canvas {
   border-right-color: yellow;
   border-bottom-color: black;
   animation: spinner .6s linear infinite;
-} */
+}
 
 @keyframes spinner {
   to {transform: rotate(360deg);}
